- Removed unrequired ScheduleDateOnly boolean - Replaced double checkbox with Schedule By radioset Files modified - [Forms.html,cx2_published_dataModel.json,pom.xml,EditInspection.html,EditInspection.variables.json,InspectionDesign.java,db-connection-settings.json]

--- a/src/main/webapp/pages/Forms/Forms.html
+++ b/src/main/webapp/pages/Forms/Forms.html
@@ -1029,6 +1029,16 @@
                         </wm-composite>
                     </wm-gridcolumn>
                 </wm-gridrow>
+                <wm-gridrow name="gridrow97" padding="unset unset 1em 1em">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn180">
+                        <wm-composite name="composite11">
+                            <wm-label class="col-md-3 control-label" name="label118" caption="Date+Time"></wm-label>
+                            <wm-container class="col-md-9" name="container17">
+                                <wm-datetime name="datetimeInspectionRequest"></wm-datetime>
+                            </wm-container>
+                        </wm-composite>
+                    </wm-gridcolumn>
+                </wm-gridrow>
                 <wm-gridrow name="gridrow89">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn165">
                         <wm-composite name="composite9">
