applied 1272 rules to Date+Time field on "Inspection Request" dialog Files modified - [pom.xml,Forms.html]

--- a/src/main/webapp/pages/Forms/Forms.html
+++ b/src/main/webapp/pages/Forms/Forms.html
@@ -1034,7 +1034,7 @@
                         <wm-composite name="composite11">
                             <wm-label class="col-md-3 control-label" name="label118" caption="Date+Time"></wm-label>
                             <wm-container class="col-md-9" name="container17">
-                                <wm-datetime name="datetimeInspectionRequest"></wm-datetime>
+                                <wm-datetime name="datetimeInspectionRequest" mindate="bind:minDaysForInspection" maxdate="bind:maxDaysForInspection" placeholder="Select Date+Time"></wm-datetime>
                             </wm-container>
                         </wm-composite>
                     </wm-gridcolumn>
