Search Results- Modal Window Files modified - [FindForm.js,FindForm.html,FindForm.variables.json]

--- a/src/main/webapp/pages/FindForm/FindForm.html
+++ b/src/main/webapp/pages/FindForm/FindForm.html
@@ -136,7 +136,7 @@
                                                                 <wm-grid-column binding="municipalityName" caption="Municipality Name" type="string" edit-widget-type="text" show="bind:Widgets.selectView.datavalue.viewName==='Standard'"
                                                                 readonly="false"></wm-grid-column>
                                                                 <wm-grid-column binding="balanceDue" caption="Balance Due" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
-                                                                <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" sortable="false" searchable="false" show="true"></wm-grid-column>
+                                                                <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true"></wm-grid-column>
                                                                 <wm-grid-row-action key="customRow" display-name="" show="true" class="btn-transparent" iconclass="wi wi-pageview" title="View Form" action="customRowAction($event)" disabled="false"></wm-grid-row-action>
                                                             </wm-grid>
                                                         </wm-gridcolumn>
