--- a/src/main/webapp/pages/CodeEnforcementDashboard/CodeEnforcementDashboard.html
+++ b/src/main/webapp/pages/CodeEnforcementDashboard/CodeEnforcementDashboard.html
@@ -81,11 +81,33 @@
                             </wm-layoutgrid>
                         </wm-tile>
                     </wm-gridcolumn>
-                    <wm-gridcolumn columnwidth="4" name="gridcolumn12" padding="2em unset" horizontalalign="center"></wm-gridcolumn>
+                    <wm-gridcolumn columnwidth="4" name="gridcolumn12" padding="2em unset" horizontalalign="center">
+                        <wm-tile name="statTile" width="240px" height="160px" class="bg-primary" on-click="Widgets.dialogNewCase.open()">
+                            <wm-layoutgrid height="100%" name="layoutgrid9">
+                                <wm-gridrow height="100%" name="gridrow12">
+                                    <wm-gridcolumn columnwidth="3" horizontalalign="center" padding="1.4em unset unset unset" name="gridcolumn26" class="col-xs-3">
+                                        <wm-icon iconsize="3em" name="tileIcon" iconclass="wi wi-note-add"></wm-icon>
+                                    </wm-gridcolumn>
+                                    <wm-gridcolumn columnwidth="9" padding="3em unset unset unset" horizontalalign="center" name="gridcolumn27" class="col-xs-9">
+                                        <wm-label name="tileTitle" caption="New Case" class="p" fontsize="1.5" fontunit="em"></wm-label>
+                                    </wm-gridcolumn>
+                                </wm-gridrow>
+                            </wm-layoutgrid>
+                        </wm-tile>
+                    </wm-gridcolumn>
                     <wm-gridcolumn columnwidth="4" name="gridcolumn11" padding="2em unset" horizontalalign="center"></wm-gridcolumn>
                 </wm-gridrow>
             </wm-layoutgrid>
         </wm-page-content>
     </wm-content>
     <wm-footer content="footer" name="footer1"></wm-footer>
+    <wm-view class="dialog-view" name="viewNewForm">
+        <wm-dialog dialogtype="design-dialog" modal="true" title="New Case" iconclass="wi wi-file-text" name="dialogNewCase">
+            <wm-panel iconclass="" autoclose="outsideClick" name="panelNewCasePage" content="newFormDialog" title="" class="panel-transparent" margin="0px">
+                <wm-param name="municipalityId" value="bind:Widgets.selectMunicipality.datavalue.ID" type="integer"></wm-param>
+                <wm-param name="dialogName" value="dialogNewCase" type="string"></wm-param>
+                <wm-param name="isCase" value="true" type="boolean"></wm-param>
+            </wm-panel>
+        </wm-dialog>
+    </wm-view>
 </wm-page>
