--- a/src/main/webapp/pages/ManageInspections/ManageInspections.html
+++ b/src/main/webapp/pages/ManageInspections/ManageInspections.html
@@ -37,6 +37,7 @@
                                     <wm-grid-column binding="municipalityInternalInspection" caption="Internal Only" type="boolean" widget-type="checkbox" primary-key="false" generator="assigned" edit-widget-type="checkbox" show="true" readonly="false">
                                         <wm-checkbox scopedatavalue="row['municipalityInternalInspection']" disabled="{{colDef.readonly || !isGridEditMode}}" class="" data-ng-class=""></wm-checkbox>
                                     </wm-grid-column>
+                                    <wm-grid-column binding="description" caption="Description" type="text" primary-key="false" generator="assigned" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                                     <wm-grid-column binding="rowOperations" caption="Actions" type="custom" width="120px" readonly="true" edit-widget-type="text" sortable="false" searchable="false" show="true"></wm-grid-column>
                                     <wm-grid-action key="addNewRow" display-name="New Inspection" show="true" class="btn-primary" iconclass="wi wi-plus" title="New Inspection" action="Widgets.dlgCreateInspectionDesign.open()" shortcutkey=""
                                     disabled="false"></wm-grid-action>
@@ -95,9 +96,19 @@
                 <wm-gridrow name="gridrow8_1">
                     <wm-gridcolumn columnwidth="12" name="gridcolumn13">
                         <wm-composite name="composite2" required="true">
-                            <wm-label class="col-md-4 form-control-static" name="label7" caption="Inspection Name" fontweight="bold"></wm-label>
-                            <wm-container class="col-md-8" name="container2">
+                            <wm-label class="col-md-4 form-control-static" name="label7" caption="Inspection Name" fontweight="bold" width="30%"></wm-label>
+                            <wm-container class="col-md-8" name="container2" width="70%">
                                 <wm-text name="textInspectionDesignName" placeholder="Enter text"></wm-text>
+                            </wm-container>
+                        </wm-composite>
+                    </wm-gridcolumn>
+                </wm-gridrow>
+                <wm-gridrow name="gridrow9">
+                    <wm-gridcolumn columnwidth="12" name="gridcolumn10">
+                        <wm-composite name="composite3">
+                            <wm-label class="col-md-3 control-label" name="label5" caption="Inspection Description" width="30%" required="true"></wm-label>
+                            <wm-container class="col-md-9" name="container3" width="70%">
+                                <wm-textarea name="textareaDescription" placeholder="Enter Description"></wm-textarea>
                             </wm-container>
                         </wm-composite>
                     </wm-gridcolumn>
