New Cases Tile and Data Grid New files added - [CasesByMunicipalityAndAfterDateResponse.java] Files modified - [Cx2QueryExecutorServiceImpl.java,NewCases.variables.json,cx2-queries.hbm.xml,QueryExecutionController.java,cx2_query.json,Cx2QueryExecutorService.java,NewCases.html] Removed files - [FormsWithCodeEnforcementByMunicipalityAndAfterDateResponse.java]

--- a/src/main/webapp/pages/NewCases/NewCases.html
+++ b/src/main/webapp/pages/NewCases/NewCases.html
@@ -32,6 +32,7 @@
                     <wm-gridcolumn columnwidth="12" name="gridcolumn19">
                         <wm-grid title="" dataset="bind:Variables.svNewCases.dataSet" navigation="Classic" name="gridNewCases" filtermode="multicolumn" showrecordcount="true" exportformat="EXCEL">
                             <wm-grid-column binding="formTitle" caption="Form Title" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
+                            <wm-grid-column binding="address" caption="Address" show="true" readonly="undefined"></wm-grid-column>
                             <wm-grid-column binding="fullName" caption="Created By" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                             <wm-grid-column binding="formType" caption="Form" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
                             <wm-grid-column binding="status" caption="Form Status" type="string" edit-widget-type="text" show="true" readonly="false"></wm-grid-column>
