Inspection Outcome settings- email Files modified - [ViewInspection.variables.json,ViewInspection.js,ViewInspection.html]

--- a/src/main/webapp/pages/ViewInspection/ViewInspection.html
+++ b/src/main/webapp/pages/ViewInspection/ViewInspection.html
@@ -76,7 +76,7 @@
                                         <wm-composite name="composite1" required="true">
                                             <wm-label class="col-md-3 control-label" name="label4" caption="Outcome"></wm-label>
                                             <wm-container class="col-md-9" name="container2_1">
-                                                <wm-select name="selectOutcome" required="true" dataset="bind:Variables.lvOutcomes.dataSet" datafield="id" displayfield="outcome" datavalue="bind:Variables.lvInspection.dataSet.data[$i].inspectionOutcomeId"></wm-select>
+                                                <wm-select name="selectOutcome" required="true" dataset="bind:Variables.lvOutcomes.dataSet" datafield="All Fields" displayfield="outcome" datavalue="bind:Variables.lvInspection.dataSet.data[$i].inspectionOutcomeId"></wm-select>
                                             </wm-container>
                                         </wm-composite>
                                     </wm-gridcolumn>
